--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
 
     <string name="empty">--//--</string>
     <string name="action_about">Sobre</string>
+    <string name="action_choose_user">Selecionar Usuário</string>
 </resources>
